// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search friends list item component will render correctly for full profile 1`] = `
"<li class="flex space-x-3 items-center even:bg-blue-300/40 even:dark:bg-blue-900/40 rounded-sm p-2">
  <div class="w-[32px]"><a href="/profile/Abel_Koss49" target="_blank" rel="noopener noreferrer" class="no-style group relative rounded-full bg-gradient-to-b from-link to-link-hover text-grey-900 flex items-center gap-1.5 h-[32px] w-[32px] shadow-inner shadow-grey-800 cursor-pointer"><span class="relative"><img class="rounded-full" width="32px" height="32px" alt="" src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/601.jpg"><!--v-if--></span>
      <!--v-if-->
      <div class="absolute top-[105%] left-2 min-w-80 opacity-0 scale-0 group-hover:opacity-100 group-hover:scale-100 flex flex-wrap bg-secondary-dark p-1 rounded-md shadow-lg shadow-grey-800/60 text-xs z-[55] transition-opacity ease-in-out duration-200"><label class="font-bold text-right w-1/5">Joined:</label><span class="w-4/5 px-1 text-pretty">7 years ago</span><label class="font-bold text-right w-1/5">Username:</label><span class="w-4/5 px-1 text-pretty">@Abel_Koss49</span><label class="font-bold text-right w-1/5">Location:</label><span class="w-4/5 px-1 text-pretty">Hamillside, CO, AZ</span>
        <!--v-if-->
      </div>
    </a></div>
  <div class="flex flex-col space-y-1 grow">
    <p class="flex space-x-3 items-baseline"><span class="text-xl font-bold">Abel Koss</span><span class="text-lg">@Abel_Koss49</span></p>
    <p class="flex space-x-2"><span class="text-danger"><i class="fa-solid fa-location-dot"></i></span><span>Hamillside, CO, AZ</span></p>
    <p class="text-sm italic flex space-x-3 text-grey-400"><span class="font-bold">Joined:</span><span>7 years ago</span></p>
  </div>
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md disabled:text-grey-500 bg-secondary hover:bg-secondary-hover" data-testid="send-request-Abel_Koss49" type="button">
      <!--v-if--> Send Friend Request
    </button></div>
</li>"
`;

exports[`Search friends list item component will render correctly for partial profile 1`] = `
"<li class="flex space-x-3 items-center even:bg-blue-300/40 even:dark:bg-blue-900/40 rounded-sm p-2">
  <div class="w-[32px]"><a href="/profile/Adolf19" target="_blank" rel="noopener noreferrer" class="no-style group relative rounded-full bg-gradient-to-b from-link to-link-hover text-grey-900 flex items-center gap-1.5 h-[32px] w-[32px] shadow-inner shadow-grey-800 cursor-pointer"><span class="relative"><img class="rounded-full" width="32px" height="32px" alt="" src="https://ui-avatars.com/api/?name=Adolf19"><!--v-if--></span>
      <!--v-if-->
      <div class="absolute top-[105%] left-2 min-w-80 opacity-0 scale-0 group-hover:opacity-100 group-hover:scale-100 flex flex-wrap bg-secondary-dark p-1 rounded-md shadow-lg shadow-grey-800/60 text-xs z-[55] transition-opacity ease-in-out duration-200"><label class="font-bold text-right w-1/5">Joined:</label><span class="w-4/5 px-1 text-pretty">2 years ago</span><label class="font-bold text-right w-1/5">Username:</label><span class="w-4/5 px-1 text-pretty">@Adolf19</span><label class="font-bold text-right w-1/5">Location:</label><span class="w-4/5 px-1 text-pretty">Not specified</span>
        <!--v-if-->
      </div>
    </a></div>
  <div class="flex flex-col space-y-1 grow">
    <p class="flex space-x-3 items-baseline"><span class="text-xl font-bold">@Adolf19</span>
      <!--v-if-->
    </p>
    <!--v-if-->
    <p class="text-sm italic flex space-x-3 text-grey-400"><span class="font-bold">Joined:</span><span>2 years ago</span></p>
  </div>
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md disabled:text-grey-500 bg-secondary hover:bg-secondary-hover" data-testid="send-request-Adolf19" type="button">
      <!--v-if--> Send Friend Request
    </button></div>
</li>"
`;
